# vcproj2cmake

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  install_me_fully_guided.rb  install_me_fully_guided.sh
cmake/: CMakeLists.txt
cmake/Modules/: CMakeLists.txt  vcproj2cmake_defs.cmake  vcproj2cmake_func.cmake
cmake/vcproj2cmake/: CMakeLists.txt  define_mappings.txt  dependency_mappings.txt  include_mappings.txt  lib_dirs_mappings.txt
doc/: development_hints.txt
samples/: CMakeLists.txt  hook_post.txt  hook_project.txt  project_exclude_list.txt
scripts/: CMakeLists.txt  vcproj2cmake.rb  vcproj2cmake_recursive.rb  vcproj2cmake_settings.rb
scripts/lib/vcproj2cmake/: util_file.rb  v2c_core.rb
scripts/v2c_plugins/: CMakeLists.txt  v2c_parser_vs7_vcproj.rb
